log
ma., 13 de may. de 2025 22:55:57: 
 sudoku.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'is_valid':
sudoku.c:47:15: error: unused variable 'l' [-Werror=unused-variable]
   47 |     int i,j,k,l;
      |               ^
test.c: At top level:
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
ma., 13 de may. de 2025 22:56:38: 
 tests:  3|4
total_score: 20/70
798d508
